--- a/SPSS/latex/main.tex
+++ b/SPSS/latex/main.tex
@@ -266,22 +266,15 @@ P\left(FELICIDAD=SI\right)=\frac{1}{\left(1+e^{\left(\left(-2.090-\left(-1.209\c
  \end{equation}
  Esto lo podemos interpretar, que con esta probabilidad predicha mayor a 0.50 una persona soltera se clasificaría como FELICIDAD=SI.\\
 \section{Conclusiones}
-   A pesar de no poder obtener resultados contundentes, se puede comprobar la tendencia de que las variables “Es creyente” y “Estado civil” son significativas en el momento de predecir la felicidad en determinado grupo estudiado, como lo es en este caso en estudiantes universitarios. En base al caso de estudio de  Gamero Tafur, Medina Martínez y Escobar Espinoza [11] podemos evidenciar que estas variables también jugaron un papel importante en su investigación, sin embargo cabe aclarar que las probabilidades que ellos obtuvieron fueron totalmente distintas a las de este estudio, puesto que como ejemplo en la variable “Estado Civil”, en este estudio se obtiene mayor probabilidad de predicción de 73.34\% de que una persona sea feliz cuando esta soltera, caso contrario al del estudio referenciado, donde el matrimonio es significativo e importante debido a las satisfacciones que genera la confianza y el intercambio de confidencias y opiniones entre esta cooperativa [14], no obstante podemos tener en cuenta que hablar de matrimonio es un caso en el cual la edad promedio de la realización de este es entre los 28 y 32 años [15]\\
-   
-   
-   Para conocer la fiabilidad y consistencia de los datos obtenidos de la encuesta fue necesario realizar el análisis de fiabilidad, este nos permitió mediante la aplicación del alfa de Cronbach obtener un alfa de 0.895 el cual satisface lo establecido por el alfa de Cronbach. Aplicando lo anterior al alfa de Cronbach de 0.895 se puede afirmar que el resultado es aceptable, los datos obtenidos de las muestras indican que tanto la herramienta de recolección (encuesta) como los resultados son confiables, sin embargo, ese resultado solo fue para validar el Oxford Happiness Questionnaire, para las otras variables, las cuales son las independientes se utilizó el análisis de fiabilidad KR-20 donde se obtuvo un resultado de 0.36. Nos podemos dar cuenta que estas variables independientes van a jugar un papel muy importante en el resultado final debido a que su fiabilidad no es muy confiable tal como se esperaba, no obstante, se tiene como idea aplicar una encuesta ya validada para futuros estudios que se están llevando a cabo.\\
+  
+  Los datos obtenidos del desarrollo de este trabajo   indican que tanto la herramienta de recolección (encuesta) como los resultados son confiables las preguntas obtenidas de Oxford Happiness Questionnaire, de esta manera se validan la efectividad de este cuestionario, para las preguntas incluidas en la encuesta desarrollada se empleó el análisis KR- 20 para determinar cuáles de las variables propuestas realmente tenían una relación directa con la felicidad. En este proceso se determinó como variables significativas “Es creyente” y “Estado civil”, en donde cada variable explica el modelo de manera correcta en un 13\% y un 18\%. por lo cual es necesario encontrar más variables para predecir la variable principal de una manera más completa y exacta. Para la primera variable encontrada se determinó que su valor se relaciona de manera directamente proporcional con la variable principal cuando su valor es “no creyente ”, mientras que el valor de estado civil es directamente proporcional respecto a la variable principal cuando las personas son solteras. Por lo tanto, se obtiene que dentro del aglomerado estudiantil de la Universidad Distrital Francisco José de Caldas las dos características anteriormente mencionadas parcialmente a las personas identificadas como felices.\\
+ 
+\section{DISCUSION} 
 
-   Por otro lado en el análisis de fiabilidad es posible hallar la correlación entre las distintas variables es decir la asociación o no de cada variable con las demás y en caso de existir dicha asociación la fuerza entre estas, para nuestro análisis estadístico su importancia radica en que nos permite agrupar las preguntas por factores de acuerdo al valor de correlación, es decir la encuesta realizada en su mayoría posee preguntas de tipo psicológico, encontramos preguntas como: “Me da la impresión que tengo mucha energía” “No me siento demasiado sano” Estas dos preguntas poseen un valor de correlación de -0,34 es decir son asociadas inversamente, ya que la segunda pregunta es una negación y aun así tiene asociación con la primera en temas de cómo el estudiante se siente de salud. Se puede deducir que no existe algún problema o restricción en tener negaciones planteadas en las preguntas ya que el software SPSS identifica variables asociativas sin importar si son inversas. Al igual que fácilmente se puede descartar de un grupo las preguntas que no hacen parte una asociación, de manera automatizada, solo siendo necesario la interpretación del resultado. En cuanto a las covarianzas, estas identifican si puedo realizar una relación entre dos preguntas, si existe ya sea inversa o si una pregunta no tiene relación alguna con otra. es decir, la covarianza me permite conocer si dos preguntas tienen relación o no. Básicamente se podría hacer una reestructuración de la encuesta, sin embargo, no es necesario ya que como lo pudimos observar, el Oxford Happiness Questionnaire es lo suficientemente fiable para este caso de estudio.\\
+En base al caso de estudio de  Gamero Tafur, Medina Martínez y Escobar Espinoza [11] podemos evidenciar que estas variables también jugaron un papel importante en su investigación, sin embargo cabe aclarar que las probabilidades que ellos obtuvieron fueron totalmente distintas a las de este estudio, puesto que como ejemplo en la variable “Estado Civil”, en este estudio se obtiene mayor probabilidad de predicción de 73.34\% de que una persona sea feliz cuando esta soltera, caso contrario al del estudio referenciado, donde el matrimonio es significativo e importante debido a las satisfacciones que genera la confianza y el intercambio de confidencias y opiniones entre esta cooperativa [14], no obstante podemos tener en cuenta que hablar de matrimonio es un caso en el cual la edad promedio de la realización de este es entre los 28 y 32 años [15] \\
 
-   En cuanto a la regresión logística binaria, podemos hacer diferentes observaciones más que conclusiones, debido a que esta es totalmente dependiente de la fiabilidad de los datos puesto que así mismo como los datos son fiables o no, los resultados de esta saldrán de la misma manera.\\
+A pesar de coincidir en la importancia de  la variable “Estado civil ” se encuentra una discrepancia en la variable “Es creyente”  pues en la investigación desarrollada por Gamero Tafur, Medina Martínez y Escobar Espinoza [11], se muestra que esta variable no tiene mayor significancia en el modelo explicativo de la felicidad, esta información revela una  diferencia existente entre la percepción de la religión entre las  distintas poblaciones.\\
 
-   Basados en la fiabilidad obtenida con el análisis de fiabilidad KR-20 en las variables independientes, podemos decir que los resultados de la Regresión Logística Binaria no son lo suficientemente veraces como para decir que son aplicables a toda la población, y eso mismo nos lo dice la prueba de Hosmer y Lemeshow, la cual nos dice que la significancia del estudio no es la suficiente como para afirmar que toda la población se comporta de la misma manera, sin embargo, se aplico el modelo de regresión para obtener las variables que son significativas en este caso en específico, las cuales son “Es creyente” y “Estado civil”.\\
-
-   Nuestra muestra estudiada, difiere con otros estudios en cuanto la variable “Es creyente”, puesto que por ejemplo en el caso de estudio del trabajo La felicidad en estudiantes universitarios de ciencias económicas: algunos determinantes socioeconómicos en la ciudad de Cartagena de Indias las personas que son creyentes son clasificadas como personas felices [4], por otro lado, en este estudio, la mayor probabilidad es que una persona no creyente es feliz, sin embargo hay diferentes estudios que corroboran que ser creyente o no son dos alternativas que no distan mucho en cuanto a la satisfaccion y felicidad en la vida [22] .\\
-
-   En el caso de la variable Estado Civil, obtenemos el mismo comportamiento, opuesto al de algunos otros estudios, pues en este caso, las personas solteras estan relacionadas con un resultado positivo a la felicidad. Cabe recalcar que tambien existen otros estudios que corroboran dicho resultado, por ejemplo La investigación llevada a cabo por Bella DePaulo [23], una doctora en psicología de la Universidad de California. Para su estudio contó con datos de más de 800 investigaciones de los últimos 30 años, con la conclusión de que los solteros poseen un mayor sentido de la autodeterminación, que es esencial para el propio desarrollo personal. Esto no significa que se deba estar soltero para siempre, sin embargo hay etapas de la vida donde un determinado estado civil puede jugar un papel importante con la vida y la satisfaccion que se lleva de esta.
-
-Finalmente podemos decir que como se esperaba, se obtuvieron algunas variables que con sentido comun podemos decir que afectan a la felicidad, sin embargo para la siguiente investigacion, se tendran en cuenta encuestas de variables independientes validadas con anterioridad, para que tanto la fiabilidad como los resultados sean acordes o cercanos con el comportamiento de toda la poblacion.
 
 \begin{thebibliography}{99}
 \bibitem{c1}R. Alarcon, «Desarrollo de una escala factorial para medir la felicidad,» Interamerican Journal of Psychology, 2006, pp. 95-102.
