--- a/SPSS/latex/main.tex
+++ b/SPSS/latex/main.tex
@@ -267,15 +267,49 @@ P\left(FELICIDAD=SI\right)=\frac{1}{\left(1+e^{\left(\left(-2.090-\left(-1.209\c
  Esto lo podemos interpretar, que con esta probabilidad predicha mayor a 0.50 una persona soltera se clasificaría como FELICIDAD=SI.\\
 \section{Conclusiones}
   
-  Los datos obtenidos del desarrollo de este trabajo   indican que tanto la herramienta de recolección (encuesta) como los resultados son confiables las preguntas obtenidas de Oxford Happiness Questionnaire, de esta manera se validan la efectividad de este cuestionario, para las preguntas incluidas en la encuesta desarrollada se empleó el análisis KR- 20 para determinar cuáles de las variables propuestas realmente tenían una relación directa con la felicidad. En este proceso se determinó como variables significativas “Es creyente” y “Estado civil”, en donde cada variable explica el modelo de manera correcta en un 13\% y un 18\%. por lo cual es necesario encontrar más variables para predecir la variable principal de una manera más completa y exacta. Para la primera variable encontrada se determinó que su valor se relaciona de manera directamente proporcional con la variable principal cuando su valor es “no creyente ”, mientras que el valor de estado civil es directamente proporcional respecto a la variable principal cuando las personas son solteras. Por lo tanto, se obtiene que dentro del aglomerado estudiantil de la Universidad Distrital Francisco José de Caldas las dos características anteriormente mencionadas parcialmente a las personas identificadas como felices.\\
+  Los datos obtenidos del desarrollo de este trabajo   indican que tanto la herramienta de recolección (encuesta) como los resultados son confiables en cuanto a las preguntas obtenidas de Oxford Happiness Questionnaire, de esta manera se valida la efectividad de este cuestionario. Para las preguntas incluidas en la encuesta desarrollada se empleó el análisis KR- 20 y la regresión logística binaria para determinar cuáles de las variables propuestas realmente tenían una relación directa con la felicidad. En este proceso se determinó como variables significativas “Es creyente” y “Estado civil”, en donde estas explican el modelo de manera correcta entre un 13\% y un 18\%. por lo cual es necesario encontrar más variables para predecir la variable principal de una manera más completa y exacta. Para la primera variable encontrada se determinó que su valor se relaciona de manera directamente proporcional con la variable principal cuando su valor es “no creyente”, mientras que el valor de estado civil es directamente proporcional respecto a la variable principal cuando las personas son solteras. Por lo tanto, se obtiene que dentro del aglomerado estudiantil de la Universidad Distrital Francisco José de Caldas las dos características anteriormente mencionadas parcialmente a las personas identificadas como felices.\\\
  
 \section{DISCUSION} 
+A pesar de no poder obtener resultados contundentes, se puede comprobar la tendencia de que las variables “Es creyente” y “Estado civil” son significativas en el momento de predecir la felicidad en determinado grupo estudiado, como lo es en este caso en estudiantes universitarios. En base al caso de estudio de  Gamero Tafur, Medina Martínez y Escobar Espinoza [11] podemos evidenciar que estas variables también jugaron un papel importante en su investigación, sin embargo cabe aclarar que las probabilidades que ellos obtuvieron fueron totalmente distintas a las de este estudio, puesto que como ejemplo en la variable “Estado Civil”, en este estudio se obtiene mayor probabilidad de predicción de 73.34\% de que una persona sea feliz cuando esta soltera, caso contrario al del estudio referenciado, donde el matrimonio es significativo e importante debido a las satisfacciones que genera la confianza y el intercambio de confidencias y opiniones entre esta cooperativa [14], no obstante podemos tener en cuenta que hablar de matrimonio es un caso en el cual la edad promedio de la realización de este es entre los 28 y 32 años [15] y considerando que más del 50\% de los encuestados son menores de 20 años, hablar de matrimonio puede ser no muy coherente, puesto que muchos jóvenes de hoy en día piensan diferente en cuanto a la vida en pareja. Eliakim Kislev, afirma que los solteros cuentan con un mayor poder de sentir felicidad y satisfacción, por ende, son menos egoístas a diferencia de aquellos que llevan una vida en pareja. [16]\\
 
-En base al caso de estudio de  Gamero Tafur, Medina Martínez y Escobar Espinoza [11] podemos evidenciar que estas variables también jugaron un papel importante en su investigación, sin embargo cabe aclarar que las probabilidades que ellos obtuvieron fueron totalmente distintas a las de este estudio, puesto que como ejemplo en la variable “Estado Civil”, en este estudio se obtiene mayor probabilidad de predicción de 73.34\% de que una persona sea feliz cuando esta soltera, caso contrario al del estudio referenciado, donde el matrimonio es significativo e importante debido a las satisfacciones que genera la confianza y el intercambio de confidencias y opiniones entre esta cooperativa [14], no obstante podemos tener en cuenta que hablar de matrimonio es un caso en el cual la edad promedio de la realización de este es entre los 28 y 32 años [15] \\
+   Un soltero regularmente, no quiere decir que así sea en todos los casos, experimenta mayor libertad, ya que no tiene que llegar a acuerdos con alguien más durante la toma de decisiones. Los solteros se sienten más completos en su profesión, vida diaria, vida social y más, sobre todo con mayor libertad para hacer planes [17], y con esto viene conjunto otras configuraciones de pareja  como “amigos con derecho”, “amigovios”, “parche”, “relaciones sexuales”, “relaciones virtuales”, frente a relaciones con compromiso, amor, confianza y construcción de intimidad [18] que actualmente muchos jóvenes practican, con esto podemos decir de forma más general que la felicidad en función de la variable estado civil es totalmente dependiente del grupo de edades estudiado, por otro lado, podemos observar la investigación hecha por Macaya Sazo, Marlene Fernandan [19], en el cual la muestra fue de hombres y mujeres de un rango de edad entre 18 y 30 y donde se concluye que las variables que se relacionan con aspectos relacionales o afectivos, son las que explican en su mayoría el nivel de felicidad de estos estudiantes, con lo que podemos afirmar que esta variable siempre se debe incluir en futuros estudios.\\
 
-A pesar de coincidir en la importancia de  la variable “Estado civil ” se encuentra una discrepancia en la variable “Es creyente”  pues en la investigación desarrollada por Gamero Tafur, Medina Martínez y Escobar Espinoza [11], se muestra que esta variable no tiene mayor significancia en el modelo explicativo de la felicidad, esta información revela una  diferencia existente entre la percepción de la religión entre las  distintas poblaciones.\\
+   En cuanto a la variable “Es creyente”  tomando como base la investigación hecha por Gamero Tafur, Medina Martínez, Escobar Espinoza [11], se muestra que esta tiene una discrepancia en el modelo explicativo de la felicidad, esta información revela una  diferencia existente entre la percepción de la religión entre las  distintas poblaciones, pues en este estudio, se evidencia que las personas no creyentes o dicho de otra manera, no practicantes de alguna religión tienen mayor probabilidad de ser felices y teniendo en cuenta una encuesta una encuesta internacional realizada por la empresa Gallup [20] hecha entre 2005 y 2011 revela que el número de personas que se consideran religiosas disminuyo de un 77\% a un 68\% y esto lo tenemos como una tendencia que va en aumento con el tiempo. Nigel Barber en su libro Why Atheism Will Replace Religion?, explica que la religión ha sido durante siglos una creación cultural elaborada para aplacar con la angustia que genera vivir en entornos altamente inestables y peligrosos, en los que el peligro y la escasez de recursos acecha en el día a día. La idea de la muerte y la sensación de desamparo podrían ser sobrellevadas mejor creyendo que la propia vida tiene que ver con una creación llena de trascendencia ultraterrena. En estos contextos, era útil [21]. Sin embargo, factores como la educación, y el alza de la posibilidad de recibir conocimiento científico en los últimos años, hace que la gente tenga más posibilidades de tener una vida relativamente cómoda, donde los estudiantes universitarios tienen un mayor acceso a esta hablando de recursos educativos. Por tanto, podemos afirmar una tendencia en la que ser creyente de alguna religión con el tiempo no va a generar mayores satisfacciones, donde con el pasar de los años la sociedad se vuelve de una u otra manera más atraída y satisfecha con los bienes materiales [22].\\
 
 
+
+Oxford Happiness Questionnaire\\
+\begin{itemize}
+\item 	No me gusta mucho mi forma de ser
+\item 	Me intereso mucho por los demás
+\item 	Creo que la vida es muy gratificante
+\item 	Siento mucho afecto por casi todo el mundo
+\item 	Pocas veces me levanto descansado/a
+\item 	No soy muy optimista respecto al futuro
+\item 	Encuentro muchas cosas divertidas
+\item 	Me comprometo e involucro en muchas cosas
+\item 	La vida es muy bonita
+\item 	No pienso que el mundo sea un lugar agradable
+\item 	Me río mucho
+\item 	Estoy muy satisfecho/a con mi vida
+\item 	No me encuentro atractivo/a
+\item 	Hay una gran diferencia entre lo que me gustaría hacer y lo que realmente hago
+\item 	Soy muy feliz
+\item 	Encuentro hermosas muchas cosas
+\item 	Siempre influyo positivamente en los demás
+\item 	Tengo tiempo para hacer todo lo que quiero
+\item 	Siento que no tengo mucho control sobre mi vida
+\item 	Me siento capaz de tomar decisiones
+\item 	Me siento mentalmente despierto/a
+\item 	Generalmente, soy alegre y optimista
+\item 	No me resulta fácil tomar decisiones
+\item 	No encuentro mucho significado y sentido a mi vida
+\item 	Me siento con mucha energía
+\item 	Suelo influir positivamente en los acontecimientos
+\item 	No me divierto con otras personas
+\item 	No me encuentro muy bien de salud
+\item 	No tengo recuerdos muy felices del pasado
+\end{itemize}
 \begin{thebibliography}{99}
 \bibitem{c1}R. Alarcon, «Desarrollo de una escala factorial para medir la felicidad,» Interamerican Journal of Psychology, 2006, pp. 95-102.
 \bibitem{c2}M. R. F. Fernández D., Construyendo nuestra felicidad para ayudar a construirla, 2009, pp. 231-239.
@@ -292,6 +326,16 @@ A pesar de coincidir en la importancia de  la variable “Estado civil ” se en
 \bibitem{c13}B. p. e. científicos, «App4Stats,» [En línea]. Available: http://app4stats.com/manual-ejemplo/.
 \bibitem{c14}M. Argyle, «Causes and correlates of happiness,» Well-Being: The foundations of hedonic psychology, pp. 353-373, 1999. 
 \bibitem{c15}COLPRENSA, «El Universal,» 9 Agosto 2015. [En línea]. Available: https://www.eluniversal.com.co/salud/cual-es-la-edad-ideal-para-casarse-202252-ATEU303506.
+\bibitem{c16}E. Kislev, Happy Singlehood: The Rising Acceptance and Celebration of Solo Living. 
+\bibitem{c17}E. Sibaja, «GQ,» 27 Marzo 2019. [En línea]. Available: https://www.gq.com.mx/estilo-de-vida/articulo/jovenes-prefieren-la-solteria-son-mas-felices.
+\bibitem{c18}A. I. Blandon Hincapie y L. M. Lopez Serna, «Comprensiones sobre pareja en la actualidad: Jovenes en busca de la estabilidad,» Revista Latinoamericana de Ciencias Sociales, Niñez y Juventud, pp. 505-517, 2016. 
+\bibitem{c19}M. F. Macaya Sazo, «Nivel de felicidad en estudiantes universitarios de la comuna de Talca,» 2015. 
+\bibitem{c20}Gallup Corporation, «Gallup,» 2005. [En línea]. Available: https://www.gallup.com/es-xm/176819/gallup-latin-america.aspx.
+\bibitem{c21}N. Barber, Why Atheism Will Replace Religion: The triumph of earthly pleasures over pie in the sky. 
+\bibitem{c22}A. Torres, «Psicologia y Mente,» [En línea]. Available: https://psicologiaymente.com/psicologia/habra-mas-ateos-que-creyentes.
+
+
+
 
 
 
